<resources>
    <string name="app_name">MySURVEY7</string>
    <string name="_4fois_ou_jour">4fois ou+/jour</string>
    <string name="_2_3fois_jour">2-3fois/jour</string>
    <string name="_1fois_jour">1fois/jour</string>
    <string name="_5_6fois_semaine">5-6fois/semaine</string>
    <string name="_2_4fois_semaine">2-4fois/semaine</string>
    <string name="_1fois_semaine">1fois/semaine</string>
    <string name="galette_d_orge">Galette d\'orge</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="previous">Previous</string>
    <string name="pain_la_nigelle_s_same">Pain à la nigelle/sésame</string>
    <string name="previous">Previous</string>
    <string name="autres_types_de_pain_mais_orge">Autres types de pain(mais,orge)</string>
    <string name="exit">EXIT</string>
    <string name="pain_de_maison_khobz_dar">Pain de maison(khobz dar)</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="jamais_rarement">Jamais/rarement</string>
    <string name="pain_d_el_harcha">Pain d\'el Harcha</string>
    <string name="exit">EXIT</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="jamais_rarement">Jamais/rarement</string>
    <string name="mlawi_msemen_ghrayef_batbout_matloua">Mlawi,Msemen,Ghrayef,Batbout,Matloua</string>
    <string name="exit">EXIT</string>
    <string name="next">Next</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="jamais_rarement">Jamais/rarement</string>
    <string name="n_importe_quel_type_de_pain">N\'importe quel type de pain</string>
    <string name="exit">EXIT</string>
    <string name="pain_la_farine">Pain à la farine</string>
    <string name="jamais_rarement">Jamais/rarement</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="_1fois_semaine">1fois/semaine</string>
    <string name="_2_4fois_semaine">2-4fois/semaine</string>
    <string name="_5_6fois_semaine">5-6fois/semaine</string>
    <string name="_1fois_jour">1fois/jour</string>
    <string name="_2_3fois_jour">2-3fois/jour</string>
    <string name="_4fois_ou_jour">4fois ou+/jour</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="exit">EXIT</string>
    <string name="pain_au_son_avec_ou_sans_sel">Pain au son(avec ou sans sel)</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="exit">EXIT</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="jamais_rarement">Jamais/rarement</string>
    <string name="exit">EXIT</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="jamais_rarement">Jamais/rarement</string>
    <string name="galette_bl">Galette blé</string>
    <string name="exit">EXIT</string>
    <string name="exit">EXIT</string>
    <string name="jamais_rarement">Jamais/rarement</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="next">Next</string>
    <string name="jamais_rarement">Jamais/rarement</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="next">Next</string>
    <string name="_1_3fois_mois">1-3fois/mois</string>
    <string name="jamais_rarement">Jamais/rarement</string>
    <string name="exit">EXIT</string>
    <string name="previous">Previous</string>
    <string name="jamais_rarement">Jamais/rarement</string>
</resources>