<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/MuchaTseBle"
    android:orientation="vertical"
    tools:context=".DashBoardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="#4D1098">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/back_logo"
            android:backgroundTint="@color/white"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/ic_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />


    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/next_btn_shape"
        android:backgroundTint="@color/purple_200"
        app:cardCornerRadius="@dimen/_10sdp">


        <TextView
            android:id="@+id/card_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="N'importe quel type de pain"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            tools:ignore="UnusedAttribute">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/card_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jamais_rarement"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/card_question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_1_3fois_mois"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/card_question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_1fois_semaine"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/card_question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_2_4fois_semaine"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/card_question7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_5_6fois_semaine"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/card_question8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_1fois_jour"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/card_question9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_2_3fois_jour"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/card_choice10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_4fois_ou_jour"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button3"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="@dimen/_15sdp"
        android:visibility="visible"
        app:cornerRadius="@dimen/_100sdp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="157dp"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:gravity="center"
        android:stateListAnimator="@android:anim/accelerate_interpolator"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:textSize="@dimen/_15sdp"
        android:visibility="visible"
        app:cornerRadius="@dimen/_103sdp" />


</LinearLayout>